freebsd-buildutils (8.2-2) UNRELEASED; urgency=low

  * 18_fix_sysdir.diff: Fix SYSDIR path to make kernel modules buildable.
    (Closes: #594183).
  * Switch to use the libbsd-overlay:
    - Bump libbsd-dev Build-Depends to (>= 0.3.0).
    - Add pkg-config to Build-Depends.
    - Remove some now obsolete porting code.

 -- Robert Millan <rmh@debian.org>  Sun, 26 Jun 2011 17:18:27 +0200

freebsd-buildutils (8.2-1) unstable; urgency=low

  [ Robert Millan ]
  * 10_non_kfreebsd.diff: Make freebsd-make usable on non-kFreeBSD
    systems.  (Closes: #602768)

  [ Guillem Jover ]
  * Now using Standards-Version 3.9.2 (no changes needed).
  * Switch to source format “3.0 (quilt)”.
    - Remove quilt from Build-Depends.
    - Remove patch target in debian/rules.
    - Remove now unneeded README.source.
    - Refresh all patches.
  * Use -C option for pmake instead of manually changing dir.
  * Stop Build-Depending on pmake, bootstrap freebsd-make using GNU make
    and use it as pmake instead of using it from the pmake package.
  * Switch to debhelper compatibility level 7.
    - Use dh_prep instead of “dh_clean -k”.
  * Only use MACHINE_ARCH in freebsd-make if it's defined.
  * Add support for Multi-Arch directories to freebsd-make:
    - Do not switch LIBDIR yet, the dynamic linker does not have the
      correct paths for i386 based architectures.
    - Add builtin MACHINE_MULTIARCH make variable.
  * Refactor source and tar name into SOURCE and TARNAME in debian/rules.
  * Line-wrap CFLAGS variable in debian/rules.
  * Install binaries directly to /usr/lib/freebsd instead of relocating them
    from /usr/bin and /usr/sbin.
  * Install the man pages. (Closes: #493898)
  * Change ‘unix’ freebsd-make variable to “We run Debian, not UNIX.” and
    remove ‘.FreeBSD’ freebsd-make variable. (Closes: #493841)
  * Intersperse Depends description comments between the actual dependencies.
  * Do not install profile and libfl.a hardlinks for freebsd-lex libln.a.
