@@ -6,6 +6,8 @@ freebsd-buildutils (8.2-2) UNRELEASED; urgency=low
     - Bump libbsd-dev Build-Depends to (>= 0.3.0).
     - Add pkg-config to Build-Depends.
     - Remove some now obsolete porting code.
+  * Disable FreeBSD/pc98 pre-7.0 compatibility on non-FreeBSD (fixes FTBFS on
+    hurd-i386).
 
  -- Robert Millan <rmh@debian.org>  Sun, 26 Jun 2011 17:18:27 +0200
 
